tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__WeAintRunningaFa-AAAAAAAAAAAAAAAAAAAL6w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3051,
  "prerequisites": [
    3049
  ],
  "properties": {
    "auto_claim": false,
    "desc": "...What's this low-purity hafnium stuff?\n\nWell, because you of course want your hafnium to be of the highest quality, you're going to have to do a little more than just EBF it with a little magnesium.\n\nGo ahead and react it with some Iodine. If you're not too sure where to get Iodine, have a look at Seaweed Ash. (hint: you'll need to look at small piles)\n\nNote that both the liquid and dust forms of iodine are optional, so you can complete the quest with one. Or none!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lWe Ain't Running a Farm!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3049
  ],
  "rewards": [],
  "tasks": []
}
