tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__WherestheSalt-AAAAAAAAAAAAAAAAAAAJCg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2314,
  "prerequisites": [
    2306
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Add Chlorine to Sodium Ruthenate to get Ruthenium Tetroxide Solution.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lWhere's the Salt?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "CHAIN"
  },
  "required_prerequisites": [
    2306
  ],
  "rewards": [],
  "tasks": []
}
