tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__YttriumBariumCup-AAAAAAAAAAAAAAAAAAAGtg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1718,
  "prerequisites": [
    213,
    86
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Yttrium Barium Cuprate becomes more important in LuV Tier. It needs an EV Mixer to mix and an Electric Blast Furnace with TPV heating coils.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lYttrium Barium Cuprate",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    213,
    86
  ],
  "rewards": [],
  "tasks": []
}
