tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__ZirconiaHafniaBl-AAAAAAAAAAAAAAAAAAAL5Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3045,
  "prerequisites": [
    3044
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This process is a little involved so I'll guide you through it. First, centrifuge the dust you got from the dissolution tank.\n\nBecause Hafnium and Zirconium are refractory metals, like Titanium and Zirconium,\nthey have very similar process to it and each other.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lZirconia-Hafnia Blend",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3044
  ],
  "rewards": [],
  "tasks": []
}
